# fyp

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  FYP.pem  Full_paper_Shariat_Taheri.doc  docker-compose.yml  install-req.sh  package.json  requirements.txt  summarize.pem
auth/: .env  .env.example  Cargo.toml  Makefile
auth-service/: Cargo.toml  Makefile  docker-compose.yml
auth-service/migrations/: 20210920054532_create-tables.sql
auth-service/src/: main.rs
auth-service/src/config/: crypto.rs  mod.rs
auth-service/src/db/: user.rs
auth-service/src/graphql/: mod.rs  schema.rs  utils.rs
auth-service/src/handlers/: graphql.rs  health.rs  mod.rs  user.rs
auth-service/src/models/: user.rs
auth/src/: main.rs
auth/src/config/: crypto.rs  mod.rs
auth/src/db/: user.rs
auth/src/handlers/: mod.rs  test.rs
auth/src/models/: user.rs
backend/: .air.toml  Cargo.toml  Makefile  docker-compose.yml  go.mod  go.sum  gqlgen.yml
backend/auth-service/src/: main.rs
backend/cmd/app/: main.go
backend/cmd/auth-service/: Cargo.toml
backend/cmd/cli/: main.go
backend/cmd/compute-service/: main.go
backend/cmd/link-service/: main.go
backend/cmd/migration/: main.go
backend/cmd/playground/: main.go
backend/cmd/slide-service/: main.go
backend/cmd/url-shortener-service/: wrangler.toml
backend/config/: config.dev.yml  config.go
backend/docker/compute-service/: Dockerfile
backend/docker/slide-service/: Dockerfile
backend/ent/: client.go  config.go  ent.go  entc.go  gql_collection.go  gql_edge.go  gql_node.go  gql_pagination.go  gql_where_input.go  instance.go  instance_create.go  instance_delete.go  instance_query.go  instance_update.go  link.go  link_create.go  link_delete.go  link_query.go  link_update.go  mutation.go  mutation_input.go  openapi.json  runtime.go  slide.go  slide_create.go  slide_delete.go  slide_query.go  slide_update.go  tx.go  user.go  user_create.go  user_delete.go  user_query.go  user_update.go
backend/ent/enttest/: enttest.go
backend/ent/hook/: hook.go
backend/ent/http/: create.go  delete.go  easyjson.go  handler.go  list.go  read.go  request.go  response.go  update.go
backend/ent/instance/: instance.go  where.go
backend/ent/link/: link.go  where.go
backend/ent/migrate/: schema.go
backend/ent/mixin/: datetime.go  timestamp.go  (+1 more)
backend/graph/: auth.graphqls  ent.graphqls  instance.graphqls  link.graphqls  models_gen.go  schema.graphqls  slide.graphqls  user.graphqls
backend/migrations/: 20211223203143_alter_schema_migrations_charset.sql
backend/scripts/: ec2-startup.sh
backend/src/: main.rs
(+286 files in other folders)
