[package]
name = "auth"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "1.1.1"
config = "0.11"
dotenv = "0.15"
serde = { version = "1.0.130", features = ["derive"] }
eyre = "0.6.5"
color-eyre = "0.5.11"
tracing = "0.1.28"
tracing-futures = "0.2.5"
tracing-log = { version = "0.1.2", features = ["env_logger"] }
tracing-subscriber = "0.2.24"