[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.9"
actix-rt = "2.2.0"
config = "0.11"
dotenv = "0.15"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6.5"
color-eyre = "0.5.11"
tracing = "0.1.28"
tracing-futures = "0.2.5"
tracing-log = { version = "0.1.2", features = ["env_logger"] }
tracing-subscriber = "0.2.24"
sqlx = { version = "0.5.7", default-features = false, features = ["runtime-tokio-native-tls", "macros", "postgres", "uuid", "chrono"] } 
uuid = { version = "0.8.2", features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
validator = "0.14"
validator_derive = "0.14"
jsonwebtoken = "7.2"
argonautica = { version = "0.2", features = ["simd"] }
futures = { version = "0.3", features = ["compat"] }
